force-app/main/default/objects/IFv2_PurchasingApproval__mdt/IFv2_PurchasingApproval__mdt.object-meta.xml
<CustomObject>
    <description>Used In Direct and Indirect purchasing workflow to map the approvers based on Value Limits in InsightFlow application version 2.0</description>
    <label>Purchasing Approval</label>
    <pluralLabel>Purchasing Approvals</pluralLabel>
</CustomObject>