force-app/main/default/objects/IFv2_PurchasingApproval__mdt/fields/ApproverApiName__c.field-meta.xml
<CustomField>
    <fullName>ApproverApiName__c</fullName>
    <description>Approver Field Api names used to map the approver</description>
    <inlineHelpText>Please select the API name of the Approver field</inlineHelpText>
    <label>ApproverApiName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approver1__c</fullName>
                <default>true</default>
                <label>Approver1__c</label>
            </value>
            <value>
                <fullName>Approver2__c</fullName>
            </value>
            <value>
                <fullName>Approver3__c</fullName>
            </value>
            <value>
                <fullName>Approver4__c</fullName>
            </value>
            <value>
                <fullName>Approver5__c</fullName>
            </value>
            <value>
                <fullName>Approver6__c</fullName>
            </value>
            <value>
                <fullName>Approver7__c</fullName>
            </value>
            <value>
                <fullName>Approver8__c</fullName>
            </value>
            <value>
                <fullName>Approver9__c</fullName>
            </value>
            <value>
                <fullName>Approver10__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>