force-app/main/default/objects/IFv2_PurchasingApproval__mdt/fields/ApproverRole__c.field-meta.xml
<CustomField>
    <fullName>ApproverRole__c</fullName>
    <inlineHelpText>Please enter the Approver Role name</inlineHelpText>
    <label>ApproverRole</label>
    <length>250</length>
    <type>Text</type>
</CustomField>