force-app/main/default/objects/IFv2_PurchasingApproval__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>Europe - For Europe countries
Rest - For Rest of the Countries
Not-Rest - For Europe countries which have a separate mapping 
All - General</inlineHelpText>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Rest</fullName>
            </value>
            <value>
                <fullName>Not-Rest</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>