force-app/main/default/objects/IFv2_PurchasingApproval__mdt/fields/HighLimit__c.field-meta.xml
<CustomField>
    <fullName>HighLimit__c</fullName>
    <inlineHelpText>Please enter the higher limit value</inlineHelpText>
    <label>HighLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>