force-app/main/default/objects/IFv2_PurchasingApproval__mdt/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <inlineHelpText>Please enter the lower limit value</inlineHelpText>
    <label>Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>