force-app/main/default/objects/IFv2_PurchasingApproval__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>Please select the appropriate region for this record</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa - SouthAfrica</fullName>
                <default>true</default>
                <label>Africa - SouthAfrica</label>
            </value>
            <value>
                <fullName>Asia - China</fullName>
            </value>
            <value>
                <fullName>Asia - India</fullName>
            </value>
            <value>
                <fullName>Asia - Japan</fullName>
            </value>
            <value>
                <fullName>Asia - Korea</fullName>
            </value>
            <value>
                <fullName>Europe - France</fullName>
            </value>
            <value>
                <fullName>Europe - Germany</fullName>
            </value>
            <value>
                <fullName>Europe - Hungary</fullName>
            </value>
            <value>
                <fullName>Europe - Italy</fullName>
            </value>
            <value>
                <fullName>Europe - Portugal</fullName>
            </value>
            <value>
                <fullName>Europe - Spain</fullName>
            </value>
            <value>
                <fullName>Europe - Global</fullName>
            </value>
            <value>
                <fullName>North America - Mexico</fullName>
            </value>
            <value>
                <fullName>North America - USA</fullName>
            </value>
            <value>
                <fullName>Rest</fullName>
            </value>
            <value>
                <fullName>South America - Brazil</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>