force-app/main/default/objects/IFv2_PurchasingApproval__mdt/fields/RoleApiName__c.field-meta.xml
<CustomField>
    <fullName>RoleApiName__c</fullName>
    <description>Role Api Name used in mapping the role</description>
    <inlineHelpText>Please select the API name of the Role field</inlineHelpText>
    <label>RoleApiName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Role01__c</fullName>
                <default>true</default>
                <label>Role01__c</label>
            </value>
            <value>
                <fullName>Role02__c</fullName>
            </value>
            <value>
                <fullName>Role03__c</fullName>
            </value>
            <value>
                <fullName>Role04__c</fullName>
            </value>
            <value>
                <fullName>Role05__c</fullName>
            </value>
            <value>
                <fullName>Role06__c</fullName>
            </value>
            <value>
                <fullName>Role07__c</fullName>
            </value>
            <value>
                <fullName>Role08__c</fullName>
            </value>
            <value>
                <fullName>Role09__c</fullName>
            </value>
            <value>
                <fullName>Role10__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>