force-app/main/default/objects/IFv2_PurchasingApproval__mdt/fields/SubjectType__c.field-meta.xml
<CustomField>
    <fullName>SubjectType__c</fullName>
    <inlineHelpText>Please select the appropriate Subject Type</inlineHelpText>
    <label>SubjectType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreements</fullName>
                <default>true</default>
                <label>Agreements</label>
            </value>
            <value>
                <fullName>Debit Notes</fullName>
            </value>
            <value>
                <fullName>Price Decision</fullName>
            </value>
            <value>
                <fullName>Purchasing Orders</fullName>
            </value>
            <value>
                <fullName>Value Independent</fullName>
            </value>
            <value>
                <fullName>Price Decision (delta volume)</fullName>
            </value>
            <value>
                <fullName>Payment Terms and Incoterms</fullName>
            </value>
            <value>
                <fullName>Sourcing Decision – COQ Approval Submission</fullName>
            </value>
            <value>
                <fullName>Credit Notes</fullName>
            </value>
            <value>
                <fullName>Sample Orders</fullName>
            </value>
            <value>
                <fullName>Price Decision(delta volume)</fullName>
                <isActive>false</isActive>
                <label>Price Decision(delta volume)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>