force-app/main/default/objects/IFv2_PurchasingApproval__mdt/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <inlineHelpText>Please enter the Approver ID</inlineHelpText>
    <label>User</label>
    <length>250</length>
    <type>Text</type>
</CustomField>