force-app/main/default/objects/IFv2_PurchasingApproval__mdt/fields/WorkFlow__c.field-meta.xml
<CustomField>
    <fullName>WorkFlow__c</fullName>
    <inlineHelpText>Please select the workflow to which the record is related to</inlineHelpText>
    <label>WorkFlow</label>
    <referenceTo>IFv2_Workflows__mdt</referenceTo>
    <relationshipLabel>Purchasing Approvals</relationshipLabel>
    <relationshipName>WorkFlow</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>