force-app/main/default/objects/IFv2_PurchasingApproval__mdt/listViews/DirectCreditListView.listView-meta.xml
<ListView>
    <fullName>DirectCreditListView</fullName>
    <columns>MasterLabel</columns>
    <columns>Limit__c</columns>
    <columns>HighLimit__c</columns>
    <columns>SubjectType__c</columns>
    <columns>Region__c</columns>
    <columns>DeveloperName</columns>
    <columns>Group__c</columns>
    <columns>RoleApiName__c</columns>
    <columns>ApproverRole__c</columns>
    <columns>ApproverApiName__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SubjectType__c</field>
        <operation>equals</operation>
        <value>Credit Notes</value>
    </filters>
    <filters>
        <field>WorkFlow__c</field>
        <operation>startsWith</operation>
        <value>Purchasing</value>
    </filters>
    <label>DirectCreditListView</label>
    <language>en_US</language>
</ListView>