force-app/main/default/objects/IFv2_PurchasingApproval__mdt/listViews/IndirectListview.listView-meta.xml
<ListView>
    <fullName>IndirectListview</fullName>
    <columns>MasterLabel</columns>
    <columns>SubjectType__c</columns>
    <columns>Region__c</columns>
    <columns>Group__c</columns>
    <columns>Limit__c</columns>
    <columns>HighLimit__c</columns>
    <columns>RoleApiName__c</columns>
    <columns>ApproverRole__c</columns>
    <columns>ApproverApiName__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WorkFlow__c</field>
        <operation>contains</operation>
        <value>indirect</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>North America - Mexico</value>
    </filters>
    <label>IndirectListview2</label>
    <language>en_US</language>
</ListView>